<?xml version="1.0"?>
<package format="2">
  <name>pclfilter</name>
  <version>0.0.0</version>
  <description>The pclfilter package</description>
  <maintainer email="rm@todo.todo">rm</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>   
  <build_depend>dynamic_reconfigure</build_depend> 
  <build_depend>tf2_sensor_msgs</build_depend> 
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
</package>